@@ -41,7 +41,7 @@ int main(void)
     static struct debconfclient *client;
     static int requested_wireless_tools = 0;
 
-    enum { BACKUP, GET_INTERFACE, WCONFIG, QUIT } state = GET_INTERFACE;
+    enum { BACKUP, GET_INTERFACE, WCONFIG, WCONFIG_WEP, WCONFIG_ESSID, QUIT } state = GET_INTERFACE;
 
     wfd = iw_sockets_open();
 
@@ -73,18 +73,23 @@ int main(void)
               requested_wireless_tools = 1;
               di_exec_shell("apt-install wireless-tools");
             }
-	    if (netcfg_wireless_set_essid (client, interface))
-	    {
-	      state = BACKUP;
-	      break;
-	    }
-            if (netcfg_wireless_set_wep (client, interface))
-            {
-              state = BACKUP;
-              break;
-            }
-	    state = QUIT;  
+	    state = WCONFIG_ESSID;
 	    break;
+
+	case WCONFIG_ESSID:
+	    if (netcfg_wireless_set_essid (client, interface))
+	      state = BACKUP;
+	    else
+	      state = WCONFIG_WEP;
+	    break;
+
+	case WCONFIG_WEP:
+            if (netcfg_wireless_set_wep (client, interface))
+              state = WCONFIG_ESSID;
+	    else
+	      state = QUIT;  
+	    break;
+
 	case QUIT:
 	    switch (netcfg_activate_dhcp(client)) {
             case 0:
