@@ -38,8 +38,7 @@ int main(void)
     static struct debconfclient *client;
     static int requested_wireless_tools = 0;
 
-    enum { BACKUP, GET_INTERFACE, GET_STATIC, WCONFIG, QUIT} state = GET_INTERFACE;
-
+    enum { BACKUP, GET_INTERFACE, GET_STATIC, WCONFIG, WCONFIG_ESSID, WCONFIG_WEP, QUIT} state = GET_INTERFACE;
 
     /* initialize libd-i */
     di_system_init("netcfg-static");
@@ -75,18 +74,23 @@ int main(void)
               requested_wireless_tools = 1;
               di_exec_shell("apt-install wireless-tools");
             }
-	    if (netcfg_wireless_set_essid (client, interface))
-	    {
-	      state = BACKUP;
-	      break;
-	    }
-            if (netcfg_wireless_set_wep (client, interface))
-            {
-              state = BACKUP;
-              break;
-            }
-	    state = GET_STATIC;
+	    state = WCONFIG_ESSID;
 	    break;
+
+	case WCONFIG_ESSID:
+	    if (netcfg_wireless_set_essid (client, interface))
+	      state = BACKUP;
+	    else
+	      state = WCONFIG_WEP;
+	    break;
+
+	case WCONFIG_WEP:
+            if (netcfg_wireless_set_wep (client, interface))
+              state = WCONFIG_ESSID;
+	    else
+	      state = GET_STATIC;
+	    break;
+
 	case QUIT:
 	    if (netcfg_activate_static(client) != 0) 
 		return 1;
